@@ -15,6 +15,10 @@ Revision history for autodie
         * DOCUMENTATION: Spurious "used only once" messages are
           documented in Fatal's documentation (as well as autodie's).
 
+        * TEST: truncate.t has been updated to avoid incorrect
+          test failures on VMS machines.  Many thanks to Craig A
+          Berry for the bug report and fix.  (RT #42110)
+
 1.997 Thu Dec  4 15:14:00 AUSEDT 2008
         * TEST: Test::More 0.86 (and possibly 0.85) appears to
           dislike package names that contain the apostrophe
